--- a/index.html
+++ b/index.html
@@ -618,12 +618,12 @@
         <script>
 				$( "form.twitter-login" ).submit(function( event ) {
 					event.preventDefault();
-				
+					alert('test1');
 					 var ref = window.open('http://digitalinc.ie/screen2/twitter_login.php', '_blank');
 					 ref.addEventListener('loadstop', function(event) {
 						 alert('background window loaded'); 
 					 });
-				
+				alert('test2');
 					return false;
 				});
 			</script>
