test added to index.html

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 			<div class="user-detail">
             </div>
-        	<a href="#" id="refresh">Update Chart (local)</a>
+        	<a href="#" id="refresh">Hit it!</a>
         	<div class="clear"></div>
         	<!--Snippet for accordion taken from  http://jqueryui.com/accordion/ -->
         	<div id="accordion">
