bug fix + version change

--- a/index.html
+++ b/index.html
@@ -629,7 +629,8 @@
 					// see docs.phonegap.com for full details
 					navigator.notification.alert(
 						'Cordova is ready!',       // message
-						function() {//do something},  // callback
+						function() {//do something
+						},  // callback
 						'Congratulations',            // title
 						'Done'                      // buttonName
 					);
