--- a/index.html
+++ b/index.html
@@ -629,7 +629,9 @@
 					// see docs.phonegap.com for full details
 					navigator.notification.alert(
 						'Cordova is ready!',       // message
-						function() {//do something
+						function() {
+							//do something
+							alert('loaded');
 						},  // callback
 						'Congratulations',            // title
 						'Done'                      // buttonName
