New functions & styles
- Check to see if there is a web connection
- Styles for alert

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>Screen2</title>
+    <script src="js/jquery.checknet-1.6.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="./js/cordova.js"></script> 
@@ -365,6 +366,9 @@
     
 		        
     $(document).ready(function () {
+		//Check to see if there is an internet connection
+        $.fn.checknet();
+		
 		//Code to get saved searches from database 
 		$.get('http://digitalinc.ie/Screen2/get-saved-searches.php', function(data){
 			$('div.saved').append(data);
@@ -502,6 +506,8 @@
 		});
 		
     });
+	
+	
     </script>
     </head>
 
