--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>Screen2</title>
-    <script src="js/jquery.checknet-1.6.min.js"></script>
+    <script src="./js/jquery.checknet-1.6.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="./js/cordova.js"></script> 
