Updated index for debugging

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>Screen2</title>
-    <script src="./js/jquery.checknet-1.6.min.js"></script>
+    <!--<script src="./js/jquery.checknet-1.6.min.js"></script>-->
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="./js/cordova.js"></script> 
@@ -367,7 +367,7 @@
 		        
     $(document).ready(function () {
 		//Check to see if there is an internet connection
-        $.fn.checknet();
+        //$.fn.checknet();
 		
 		//Code to get saved searches from database 
 		$.get('http://digitalinc.ie/Screen2/get-saved-searches.php', function(data){
