Updated checknet function

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
     <meta charset="UTF-8">
     <title>Screen2</title>
-    <!--<script src="./js/jquery.checknet-1.6.min.js"></script>-->
+   
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="./js/cordova.js"></script> 
     <script src="./js/jquery.ui.touch-punch.min.js"></script>
+     <script src="./js/jquery.checknet-1.6.min.js"></script>
     <script src="http://d3js.org/d3.v3.js"></script>
 	<script src="./js/rickshaw/rickshaw.js"></script>
     <script type="text/javascript" src="js/twitterfeed.js"></script>
