--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 		        
     $(document).ready(function () {
 		//Check to see if there is an internet connection
-        //$.fn.checknet();
+        $.fn.checknet();
 		
 		//Code to get saved searches from database 
 		$.get('http://digitalinc.ie/Screen2/get-saved-searches.php', function(data){
