--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
     $(document).ready(function () {
 		//Check to see if there is an internet connection
         $.fn.checknet();
+		checknet.config.checkInterval = 1000;
+		checknet.config.warnMsg = "No Internet connection detected, please connect to access Screen2 features.";
 		
 		//Code to get saved searches from database 
 		$.get('http://digitalinc.ie/Screen2/get-saved-searches.php', function(data){
