--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     $(document).ready(function () {
 		//Check to see if there is an internet connection
         setInterval(function () {
-			if(navigator.onLine != 'true') {
+			if(navigator.onLine != true) {
 				alert("Offline " + navigator.onLine);
 			}
 				
