Debugging connectivity test on index

--- a/index.html
+++ b/index.html
@@ -368,8 +368,10 @@
 		        
     $(document).ready(function () {
 		//Check to see if there is an internet connection
+		
+		//Solution from http://stackoverflow.com/questions/17377579/how-to-check-internet-connection-in-phonegap-periodically
         setInterval(function () {
-			if(navigator.onLine != true) {
+			if(navigator.onLine == false) {
 				alert("Offline " + navigator.onLine);
 			}
 				
