removed debug alert

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 					var ref = window.open('http://digitalinc.ie/Screen2/twitter_login.php', '_blank', 'location=yes');
 					
 					var myCallback = function(event) { 
-						alert(event.url); 
+						//alert(event.url); 
 						if (event.url.indexOf('digitalinc.ie') > 0 && event.url.indexOf('twitter_login.php') < 0) {
 							ref.close();
 						}
