Updated alert text

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 				showCloseText: 'close',
 				onBlurContainer: '.container',
 				openOnEvent: false,
-				template: '<p>No Internet connection detected, please connect to access Screen2 features</p>',
+				template: '<p>Whoops! it looks like you can\'t conect to the internet right now. Please check your connection settings to access Screen&sup2;\'s features.</p>',
 				onUnload: function (elem) { 
 					status = setInterval(checkOnline, 1000); 
 				}
