Comments added to code
source of plugin

--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
 	//Check to see if there is an internet connection
 		
 	//Solution from http://stackoverflow.com/questions/17377579/how-to-check-internet-connection-in-phonegap-periodically
+	//Alert plugin from http://labs.voronianski.com/jquery.avgrund.js/
 	var status;
 	
 	function checkOnline(){
